Fix T67548: Camera background-image ignores shift

Regression from 2.79